[project]
name = "uaprio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rio", email = "rio180503@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "streamlit run main.py"