[project]
name = "UAPMLRIO"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Rio Gunawan", email = "87023306+rio-gunawan18@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "streamlit run main.py"